# hip-kernels

./: .gitignore  BUGFIX_REPORT.md  CMakeLists.txt
include/: config.h  cuda_utils.h  hip_compat.h  nccl_utils.h  profiler.h  tensor.h
src/comm/: buffer_manager.cu  ep_comm.cu  nccl_manager.cu
src/engine/: bridge.cu  engine.cu  profiler.cu
src/kernels/: flash_attention.cu  fused_mxfp4_gemv.cu  gemv_bf16.cu  moe_combine.cu  moe_permute.cu  mxfp4_dequant.cu  paged_attention.cu  rmsnorm.cu  rope.cu  swiglu.cu  topk_softmax.cu
src/memory/: kv_cache_manager.cu  weight_loader.cu
src/model/: attention.cu  moe_layer.cu  transformer.cu
src/python/: bindings.cpp
